[gd_scene load_steps=11 format=3 uid="uid://ckbv6dguefvi8"]

[ext_resource type="Script" path="res://Scenes/Levels/MainMenu.gd" id="1_lk7sq"]
[ext_resource type="Texture2D" uid="uid://ssvtbwwi687e" path="res://Assets/Textures/banner.png" id="1_ubqfr"]
[ext_resource type="FontFile" uid="uid://d3mxcacciie02" path="res://Assets/PixelOperator8.ttf" id="3_30xao"]
[ext_resource type="PackedScene" uid="uid://ce2c6kfbekmja" path="res://Scenes/Managers/DoorwayTeleporter.tscn" id="3_d1xrm"]
[ext_resource type="FontFile" uid="uid://d1hclnq7y54ni" path="res://Assets/PixelOperator8-Bold.ttf" id="4_ug2j6"]

[sub_resource type="LabelSettings" id="LabelSettings_8vywy"]
font = ExtResource("4_ug2j6")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_n8611"]
line_spacing = 20.0
font = ExtResource("3_30xao")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_o55ee"]
font = ExtResource("4_ug2j6")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_dbbnt"]
line_spacing = 20.0
font = ExtResource("3_30xao")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_tyoam"]
font = ExtResource("4_ug2j6")
font_size = 51

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_lk7sq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -519.72
offset_bottom = 520.52
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ubqfr")
expand_mode = 4
stretch_mode = 5

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0352941, 0.0352941, 0.0352941, 0.411765)

[node name="Credits" type="VBoxContainer" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 255.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="MadeByTxt" type="Label" parent="CanvasLayer/ColorRect2/Credits"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "MADE BY"
label_settings = SubResource("LabelSettings_8vywy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Names" type="Label" parent="CanvasLayer/ColorRect2/Credits"]
layout_mode = 2
text = "MrMacNova - Main Dev and Lead
Ambrose - Mechanics Dev
Mickplouffe - UI Dev
Alpaca - Visual Artist
Daniel Keating - Music and SFX"
label_settings = SubResource("LabelSettings_n8611")
vertical_alignment = 1

[node name="Controls" type="VBoxContainer" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -429.0
offset_top = -240.0
offset_bottom = -16.9995
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="ControlsTxt" type="Label" parent="CanvasLayer/ColorRect2/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Controls"
label_settings = SubResource("LabelSettings_o55ee")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Names" type="Label" parent="CanvasLayer/ColorRect2/Controls"]
layout_mode = 2
text = "Move - WASD
Looking - Mouse
Attack - Left Mouse Click
Talk/Interact - E
Pause - Esc"
label_settings = SubResource("LabelSettings_dbbnt")
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.5
offset_top = -119.5
offset_right = 303.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(600, 170)
layout_mode = 2
theme_override_font_sizes/font_size = 76
text = "Back to the Dungeon with You!"
label_settings = SubResource("LabelSettings_tyoam")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="PlayBtn" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Play"

[node name="QuitBtn" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Quit"

[node name="DoorwayTeleporter" parent="." instance=ExtResource("3_d1xrm")]
fade_duration = 0.5

[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer2/PlayBtn" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer2/QuitBtn" to="." method="_on_quit_pressed"]
